Ignore temporary vim files

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,15 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+# swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
+# auto-generated tag files
+tags
